# minisat

./: CMakeLists.txt
cmake/: MinisatConfig.cmake.in  MinisatConfigVersion.cmake.in
minisat/utils/: StreamBuffer.h
